--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "react-navbar-example",
   "version": "1.0.0",
   "description": "React Navbar example from https://coreui.io/react/docs/components/navbar/",
-  "main": "src/index.js",
+  "main": "src/index.html",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "homepage": "https://hlinasailo.github.io/my-website/"
+
   },
   "dependencies": {
     "@coreui/coreui": "latest",
